home view lista

--- a/frontend/src/styles/NavbarAltiplano.css
+++ b/frontend/src/styles/NavbarAltiplano.css
@@ -1,3 +1,7 @@
+.navbar-fixed-top {
+  margin-top: 10px !important;
+}
+
 .nav-item-hover {
     position: relative !important;
     display: inline-block !important;
