--- a/frontend/src/styles/Usuarios.module.css
+++ b/frontend/src/styles/Usuarios.module.css
@@ -1,3 +1,7 @@
+.login-page {
+  padding-top: 80px; 
+}
+
 .perfilUsuarioContainer {
   display: flex;
   flex-direction: column;
@@ -149,11 +153,13 @@
   width: 90%;
   max-width: 400px;
   margin: 0 auto;
+  margin-top: 200px;
   padding: 20px;
-  background-color: #FFFFFF;
+  padding-top: 80px !important; 
   border: 1px solid #C6BFAB;
   border-radius: 8px;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Agrega un pequeño sombreado para mejorar la apariencia */
 }
 
 .usuariosContainer h2 {
