--- a/frontend/src/styles/Usuarios.module.css
+++ b/frontend/src/styles/Usuarios.module.css
@@ -79,6 +79,11 @@
   margin-bottom: 10px;
 }
 
+.form{
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
 .formGroup {
   margin-bottom: 15px;
 }
@@ -106,6 +111,7 @@
   color: #FFFFFF;
   padding: 10px 20px;
   margin-top: 10px;
+  margin-bottom: 10px;
   cursor: pointer;
   border-radius: 4px;
   border: none;
@@ -210,6 +216,16 @@
   background-color: #45A049;
 }
 
+.usuariosContainer .registrarseBoton {
+  background-color: #C6BFAB !important;
+  color: #FFFFFF;
+  border: none;
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
 .usuariosContainer p {
   color: #282A2D;
   margin-top: 10px;
@@ -255,4 +271,9 @@
 
 .addLienzoButton:hover {
   background-color: #45A049;
+}
+
+.passwordForgotten{
+  margin-top: 20px;
+  text-align: center;
 }
