--- a/frontend/src/styles/Cuestionario.module.css
+++ b/frontend/src/styles/Cuestionario.module.css
@@ -2,6 +2,7 @@
   width: 90%;
   max-width: 800px;
   margin: 0 auto;
+  margin-top: 140px;
   padding: 20px;
   background-color: #FFFFFF;
   border: 1px solid #C6BFAB;
