--- a/frontend/src/styles/Usuarios.module.css
+++ b/frontend/src/styles/Usuarios.module.css
@@ -8,6 +8,8 @@
   width: 90%;
   max-width: 800px;
   margin: 0 auto;
+  margin-top: 130px;
+  margin-bottom: 80px;
   background-color: #FFFFFF;
   border: 1px solid #C6BFAB;
   border-radius: 8px;
