--- a/frontend/src/styles/Cuestionario.module.css
+++ b/frontend/src/styles/Cuestionario.module.css
@@ -1,3 +1,8 @@
+.cuestionario{
+  padding: 40px !important;
+  margin: 40px !important;
+}
+
 .cuestionarioContainer {
   width: 90%;
   max-width: 800px;
