--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,37 +1,135 @@
 .hero-section {
-    background-image: url('/assets/images/GRANJERA.png');
-    background-size: cover;
-    background-position: center;
-    height: 60vh; 
-    color: #fff; 
-    padding-top: 20vh; 
-  }
-  
-  .hero-section .texto-hero{
-    margin-left: 0px !important;
-    text-align: left;
-  }
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  color: #fff;
+  padding-top: 20vh;
+}
 
-  
-  .hero-section h1 {
-    font-weight: bold;
-    color: #282A2D;
-  }
-  
-  .hero-section p {
-    font-size: 1.55rem;
-    font-weight: bold;
-    color: #fff;
-  }
-  
-  
-  .hero-section .btn-primary {
-    background-color: #282A2D;
-    border-color: #282A2D;
-    transition: background-color 0.3s, border-color 0.3s;
-  }
-  
-  .hero-section .btn-primary:hover {
-    background-color: #505050; 
-    border-color: #505050;
-  }
+.hero-section .texto-hero {
+  margin-left: 0px !important;
+  text-align: left;
+}
+
+.hero-section h1 {
+  font-weight: bold;
+  color: #282A2D;
+}
+
+.hero-section p {
+  font-size: 1.55rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+.hero-section .btn-primary {
+  background-color: #282A2D;
+  border-color: #282A2D;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+.hero-section .btn-primary:hover {
+  background-color: #505050;
+  border-color: #505050;
+}
+
+.lienzo-title-section {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.lienzo-title-section h2 {
+  color: #000;
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.lienzo-title-section p {
+  color: #555;
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
+
+.product-details {
+  background: rgba(245, 245, 245, 0.9);
+  color: #333;
+  padding: 15px;
+  border-radius: 8px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #000;
+}
+
+.swiper-slide img {
+  display: block;
+  margin: auto;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+
+.carousel-with-peek .carousel-item {
+  transition: transform 0.5s ease-in-out;
+  overflow: hidden;
+}
+
+.carousel-item-custom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  filter: invert(1);
+}
+
+.carousel-with-peek .carousel-item-next,
+.carousel-with-peek .carousel-item-prev,
+.carousel-with-peek .carousel-item.active {
+  display: flex;
+  flex: 1 0 auto;
+}
+
+.carousel-item-next,
+.carousel-item-prev {
+  transform: scale(0.9);
+}
+
+.product-carousel {
+  background-color: #fff !important;
+}
+
+.product-carousel p {
+  color: #555;
+  font-size: 1rem;
+  margin-bottom: 2rem;
+}
+
+.product-caption {
+  margin-top: 15px;
+}
+
+.product-caption h3 {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.product-caption p {
+  margin-bottom: 10px;
+}
+
+.product-carousel p.text-center {
+  margin-top: 30px;
+}
+
+.product-carousel .swiper-slide .product-caption {
+  margin-top: 20px;
+}
