--- a/frontend/src/styles/Cuestionario.module.css
+++ b/frontend/src/styles/Cuestionario.module.css
@@ -4,6 +4,11 @@
   margin: 40px !important;
 }
 
+.cuestionario2{
+  padding: 40px !important;
+  margin: 80px !important;
+}
+
 .cuestionarioContainer {
   width: 90%;
   max-width: 800px;
