--- a/frontend/src/styles/NavbarAltiplano.css
+++ b/frontend/src/styles/NavbarAltiplano.css
@@ -80,4 +80,18 @@
     display: inline-block;
   }
 
-  
+  .profile-button2 {
+    background-color: transparent; 
+    border: none;               
+    color: inherit;            
+    font: inherit;             
+    padding: 0;                
+    margin: 0;                  
+    cursor: pointer;               
+}
+
+.profile-button{
+  border-radius: 3px;
+  border: none;   
+  background-color:#c6bfab;
+}
